--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,9 +11,12 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   cupertino_icons: ^1.0.8
   flex_color_picker: ^3.6.0
+  flutter_blue_plus: ^1.33.4
+  go_router: ^14.3.0
+  permission_handler: ^11.3.1
+  shared_preferences: ^2.3.2
 
 dev_dependencies:
   flutter_test:
@@ -22,5 +25,10 @@ dev_dependencies:
   flutter_lints: ^4.0.0
 
 flutter:
+  assets:
+    - assets/image/farmimage.jpg
+    - assets/image/color_picker.png
+    - assets/image/Disconnect.png
+    - assets/image/Connect.png
 
   uses-material-design: true
