--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
 
   cupertino_icons: ^1.0.8
   flex_color_picker: ^3.6.0
-  flutter_blue_plus: ^1.33.4
+  flutter_reactive_ble: ^5.3.1
   go_router: ^14.3.0
   permission_handler: ^11.3.1
   shared_preferences: ^2.3.2
