--- a/embed/DEV/platformio.ini
+++ b/embed/DEV/platformio.ini
@@ -17,3 +17,4 @@ lib_deps =
 	bblanchon/ArduinoJson@^7.2.0
 	adafruit/Adafruit Unified Sensor@^1.1.14
 	senseshift/Serial_BLE@^1.1.3
+	adafruit/Adafruit NeoPixel@^1.12.3
